--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-numpy
-pandas
-matplotlib
-scikit-learn==1.5.2
-joblib
-flask
-imbalanced-learn
-scipy
-seaborn
+numpy==1.26.4
+pandas==2.2.3
+matplotlib==3.9.2
+scikit-learn==1.5.1
+joblib==1.4.2
+flask==3.0.3
+imbalanced-learn==0.12.3
+scipy==1.14.1
+seaborn==0.13.2
 gunicorn
-tensorflow
-keras
+tensorflow==2.17.0
+keras==3.6.0
